--- a/package.json
+++ b/package.json
@@ -41,33 +41,31 @@
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/pwa": "3.3.5",
-    "axe-core": "4.1.1",
+    "axe-core": "4.1.2",
     "chart.js": "2.9.4",
     "cross-env": "7.0.3",
-    "dayjs": "1.10.3",
+    "dayjs": "1.10.4",
     "netlify-lambda": "2.0.3",
     "nuxt": "2.14.12",
-    "nuxt-i18n": "6.17.0",
+    "nuxt-i18n": "6.20.0",
     "vue": "2.6.12",
     "vue-chartjs": "3.5.1",
-    "vue-meta": "2.4.0",
     "vue-scrollto": "2.20.0",
     "vue-spinner": "1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/runtime-corejs3": "7.12.5",
-    "@mdi/js": "5.8.55",
+    "@babel/core": "7.12.16",
+    "@babel/runtime-corejs3": "7.12.13",
+    "@mdi/js": "5.9.55",
     "@nuxt/typescript-build": "2.0.4",
     "@nuxtjs/eslint-config": "3.1.0",
     "@nuxtjs/eslint-config-typescript": "3.0.0",
     "@nuxtjs/google-analytics": "2.4.0",
-    "@nuxtjs/gtm": "2.4.0",
-    "@nuxtjs/pwa": "3.2.2",
-    "@nuxtjs/router": "1.5.0",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "2.9.30",
+    "@vue/compiler-core": "3.0.5",
+    "@vue/server-renderer": "3.0.5",
     "core-js": "3.8.3",
     "eslint": "7.16.0",
     "eslint-config-prettier": "6.15.0",
@@ -75,19 +73,20 @@
     "eslint-plugin-simple-import-sort": "5.0.3",
     "eslint-plugin-tsdoc": "0.2.11",
     "husky": "4.3.8",
-    "lint-staged": "10.5.3",
-    "nuxt-purgecss": "1.0.0",
+    "lint-staged": "10.5.4",
+    "nuxt-property-decorator": "2.9.1",
     "nuxt-svg-loader": "1.2.0",
     "nuxt-webfontloader": "1.1.0",
     "prettier": "2.2.1",
+    "purgecss": "4.0.0",
     "rimraf": "3.0.2",
+    "sass": "1.32.6",
     "stylelint": "13.8.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
-    "ts-loader": "8.0.14",
-    "typescript": "4.1.3",
+    "typescript": "4.1.5",
     "vue-axe": "2.4.4",
-    "vue-template-compiler": "2.6.12"
+    "vuetify": "2.4.3"
   }
 }
