--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/runtime-corejs3": "7.12.13",
     "@mdi/js": "5.9.55",
     "@nuxt/typescript-build": "2.0.4",
+    "@nuxtjs/device": "2.0.0",
     "@nuxtjs/eslint-config": "3.1.0",
     "@nuxtjs/eslint-config-typescript": "3.0.0",
     "@nuxtjs/google-analytics": "2.4.0",
