--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "2.9.30",
+    "@types/sass": "1.16.0",
     "@vue/compiler-core": "3.0.5",
     "@vue/server-renderer": "3.0.5",
     "core-js": "3.8.3",
@@ -78,10 +79,13 @@
     "nuxt-property-decorator": "2.9.1",
     "nuxt-svg-loader": "1.2.0",
     "nuxt-webfontloader": "1.1.0",
+    "postcss": "8.2.6",
+    "postcss-loader": "5.0.0",
     "prettier": "2.2.1",
     "purgecss": "4.0.0",
     "rimraf": "3.0.2",
     "sass": "1.32.6",
+    "sass-loader": "10.1.1",
     "stylelint": "13.8.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
