--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "purgecss": "4.0.0",
     "rimraf": "3.0.2",
     "sass": "1.32.6",
+    "sass-loader": "11.0.1",
     "stylelint": "13.8.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
