--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     }
   },
   "dependencies": {
-    "@nuxt/types": "2.14.12",
+    "@nuxt/types": "2.15.0",
     "@nuxt/typescript-runtime": "2.0.1",
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/gtm": "2.4.0",
@@ -46,8 +46,8 @@
     "cross-env": "7.0.3",
     "dayjs": "1.10.4",
     "netlify-lambda": "2.0.3",
-    "nuxt": "2.14.12",
-    "nuxt-i18n": "6.20.0",
+    "nuxt": "2.15.0",
+    "nuxt-i18n": "6.20.1",
     "vue": "2.6.12",
     "vue-chartjs": "3.5.1",
     "vue-scrollto": "2.20.0",
@@ -80,15 +80,13 @@
     "nuxt-webfontloader": "1.1.0",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "sass-loader": "10.1.1",
+    "sass": "1.32.7",
     "stylelint": "13.10.0",
-    "sass": "1.32.6",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.19.0",
     "typescript": "4.1.5",
     "vue-axe": "2.4.4",
-    "vuetify": "2.4.4",
-    "webpack": "5.21.2"
+    "vuetify": "2.4.4"
   }
 }
