--- a/package.json
+++ b/package.json
@@ -1,43 +1,32 @@
 {
   "name": "covid19",
   "version": "1.0.0",
+  "private": true,
   "description": "東京都 新型コロナウイルス感染症対策サイト",
   "author": "東京都",
-  "private": true,
-  "engines": {
-    "node": ">=10.23.2"
-  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt-ts",
-    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "cross-env NODE_ENV=production nuxt-ts start",
-    "generate:deploy": "cross-env GENERATE_ENV=production NODE_OPTIONS=--max_old_space_size=2048 nuxt-ts generate --fail-on-page-error && yarn functions:build",
-    "generate:dev": "cross-env GENERATE_ENV=development NODE_OPTIONS=--max_old_space_size=2048 nuxt-ts generate --fail-on-page-error && yarn functions:build",
-    "generate": "eslint \"./**/*.{js,ts,vue}\" && nuxt-ts generate",
-    "test": "echo 'skip tests (there is no test)'",
+    "build": "nuxt build",
     "lint": "eslint \"./**/*.{js,ts,vue}\"",
+    "clean-hardsource": "rimraf ./node_modules/.cache/hard-source",
+    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt",
+    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt",
+    "functions:build": "netlify-lambda build functions",
+    "functions:dev": "netlify-lambda serve functions",
+    "generate": "eslint \"./**/*.{js,ts,vue}\" && nuxt generate",
+    "generate:deploy": "cross-env GENERATE_ENV=production NODE_OPTIONS=--max_old_space_size=2048 nuxt generate --fail-on-page-error && yarn functions:build",
+    "generate:dev": "cross-env GENERATE_ENV=development NODE_OPTIONS=--max_old_space_size=2048 nuxt generate --fail-on-page-error && yarn functions:build",
     "lint:fix": "eslint \"./**/*.{js,ts,vue}\" --fix",
+    "start": "cross-env NODE_ENV=production nuxt start",
     "stylelint": "stylelint '**/*.{css,scss,vue}'",
     "stylelint:fix": "stylelint --fix '**/*.{css,scss,vue}'",
-    "clean-hardsource": "rimraf ./node_modules/.cache/hard-source",
-    "functions:dev": "netlify-lambda serve functions",
-    "functions:build": "netlify-lambda build functions"
+    "test": "echo 'skip tests (there is no test)'"
   },
-  "lint-staged": {
-    "*.{js,ts,css,vue}": [
-      "eslint --fix"
-    ],
-    "*.{css,scss,vue}": "stylelint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "./pre-commit.sh && lint-staged"
-    }
-  },
+  "browserslist": [
+    "defaults",
+    "not IE <= 10"
+  ],
   "dependencies": {
-    "@nuxt/types": "2.15.0",
-    "@nuxt/typescript-runtime": "2.0.1",
+    "@nuxt/types": "2.15.1",
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/pwa": "3.3.5",
@@ -46,18 +35,20 @@
     "cross-env": "7.0.3",
     "dayjs": "1.10.4",
     "netlify-lambda": "2.0.3",
-    "nuxt": "2.15.0",
-    "nuxt-i18n": "6.20.1",
-    "vue": "2.6.12",
+    "nuxt": "2.15.1",
+    "nuxt-i18n": "6.20.2",
+    "vue": "3.0.5",
     "vue-chartjs": "3.5.1",
+    "vue-router": "4.0.4",
     "vue-scrollto": "2.20.0",
     "vue-spinner": "1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.12.16",
-    "@babel/runtime-corejs3": "7.12.13",
+    "@babel/core": "7.12.17",
+    "@babel/runtime-corejs3": "7.12.18",
     "@mdi/js": "5.9.55",
-    "@nuxt/typescript-build": "2.0.4",
+    "@nuxt/typescript-build": "2.0.5",
+    "@nuxt/webpack": "2.15.1",
     "@nuxtjs/device": "2.0.0",
     "@nuxtjs/eslint-config": "5.0.0",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
@@ -65,28 +56,58 @@
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "2.9.30",
-    "@vue/compiler-core": "3.0.5",
+    "@vue/reactivity": "3.0.5",
+    "@vue/runtime-core": "3.0.5",
+    "@vue/runtime-dom": "3.0.5",
     "@vue/server-renderer": "3.0.5",
-    "core-js": "3.8.3",
+    "@webassemblyjs/floating-point-hex-parser": "1.11.0",
+    "@webassemblyjs/helper-numbers": "1.11.0",
+    "@webassemblyjs/helper-wasm-section": "1.11.0",
+    "@webassemblyjs/wasm-edit": "1.11.0",
+    "@webassemblyjs/wasm-opt": "1.11.0",
+    "core-js": "3.9.0",
+    "csstype": "3.0.6",
+    "es-module-lexer": "0.4.0",
     "eslint": "7.20.0",
-    "eslint-config-prettier": "7.2.0",
+    "eslint-config-prettier": "8.0.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-tsdoc": "0.2.11",
-    "husky": "5.0.9",
+    "husky": "5.1.1",
     "lint-staged": "10.5.4",
     "nuxt-property-decorator": "2.9.1",
     "nuxt-svg-loader": "1.2.0",
     "nuxt-webfontloader": "1.1.0",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
-    "sass": "1.32.7",
-    "stylelint": "13.10.0",
+    "sass": "1.32.8",
+    "stylelint": "13.11.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.19.0",
+    "terser-webpack-plugin": "5.1.1",
     "typescript": "4.1.5",
     "vue-axe": "2.4.4",
-    "vuetify": "2.4.4"
+    "watchpack": "2.1.1",
+    "webpack": "5.24.0"
+  },
+  "resolutions": {
+    "vue/@vue/server-renderer": "3.x",
+    "vue/vue-server-renderer": "2.x",
+    "vue/vue-template-compiler": "2.x"
+  },
+  "engines": {
+    "node": ">=10.23.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "./pre-commit.sh && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,css,vue}": [
+      "eslint --fix"
+    ],
+    "*.{css,scss,vue}": "stylelint"
   }
 }
