--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
     "not IE <= 10"
   ],
   "dependencies": {
-    "@nuxt/types": "2.15.1",
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/pwa": "3.3.5",
+    "@vue/runtime-core": "3.0.5",
+    "@vue/runtime-dom": "3.0.5",
     "axe-core": "4.1.2",
     "chart.js": "2.9.4",
     "cross-env": "7.0.3",
     "dayjs": "1.10.4",
     "netlify-lambda": "2.0.3",
-    "nuxt": "2.15.1",
+    "nuxt": "2.15.2",
     "nuxt-i18n": "6.20.2",
     "vue-chartjs": "3.5.1",
     "vue-router": "4.0.4",
@@ -43,12 +44,11 @@
     "vue-spinner": "1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.12.17",
-    "@babel/preset-env": "7.13.0",
-    "@babel/runtime-corejs3": "7.12.18",
     "@mdi/js": "5.9.55",
+    "@nuxt/babel-preset-app": "2.15.2",
+    "@nuxt/types": "2.15.2",
     "@nuxt/typescript-build": "2.0.5",
-    "@nuxt/webpack": "2.15.1",
+    "@nuxt/webpack": "2.15.2",
     "@nuxtjs/device": "2.0.0",
     "@nuxtjs/eslint-config": "5.0.0",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
@@ -57,8 +57,8 @@
     "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "2.9.30",
     "@vue/reactivity": "3.0.5",
-    "@vue/runtime-core": "3.0.5",
-    "@vue/runtime-dom": "3.0.5",
+    "@vue/compiler-core": "3.0.5",
+    "@vue/compiler-dom": "3.0.5",
     "@vue/server-renderer": "3.0.5",
     "@webassemblyjs/floating-point-hex-parser": "1.11.0",
     "@webassemblyjs/helper-numbers": "1.11.0",
