--- a/package.json
+++ b/package.json
@@ -21,59 +21,58 @@
     "stylelint:fix": "stylelint --fix '**/*.{css,scss,vue}'",
     "test": "echo 'skip tests (there is no test)'"
   },
+  "npm-config": {
+    "node-version": false,
+    "optional": false
+  },
   "dependencies": {
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/pwa": "3.3.5",
-    "@vue/runtime-core": "3.0.6",
-    "@vue/runtime-dom": "3.0.6",
+    "@vue/runtime-core": "3.0.7",
+    "@vue/runtime-dom": "3.0.7",
     "axe-core": "4.1.2",
     "chart.js": "2.9.4",
     "cross-env": "7.0.3",
     "dayjs": "1.10.4",
     "netlify-lambda": "2.0.3",
     "nuxt": "2.15.2",
-    "nuxt-i18n": "6.20.3",
+    "nuxt-i18n": "6.20.4",
     "vue-chartjs": "3.5.1",
     "vue-router": "4.0.4",
     "vue-scrollto": "2.20.0",
     "vue-spinner": "1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.12.16",
-    "@babel/preset-env": "^7.13.5",
-    "@babel/runtime-corejs3": "7.12.13",
+    "@babel/core": "7.13.8",
+    "@babel/preset-env": "7.12.17",
+    "@babel/runtime-corejs3": "7.13.9",
     "@mdi/js": "5.9.55",
     "@nuxt/types": "2.15.2",
     "@nuxt/typescript-build": "2.0.6",
     "@nuxt/webpack": "2.15.2",
-    "@nuxtjs/device": "2.0.0",
+    "@nuxtjs/device": "2.0.1",
     "@nuxtjs/eslint-config": "5.0.0",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/google-analytics": "2.4.0",
     "@nuxtjs/router": "1.5.1",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.3",
-    "@types/chart.js": "2.9.30",
-    "@vue/compiler-core": "3.0.6",
-    "@vue/compiler-dom": "3.0.6",
-    "@vue/reactivity": "3.0.6",
-    "@vue/server-renderer": "3.0.6",
-    "@webassemblyjs/floating-point-hex-parser": "1.11.0",
-    "@webassemblyjs/helper-numbers": "1.11.0",
-    "@webassemblyjs/helper-wasm-section": "1.11.0",
-    "@webassemblyjs/wasm-edit": "1.11.0",
-    "@webassemblyjs/wasm-opt": "1.11.0",
-    "core-js": "3.9.0",
+    "@types/chart.js": "2.9.31",
+    "@vue/compiler-core": "3.0.7",
+    "@vue/compiler-dom": "3.0.7",
+    "@vue/server-renderer": "3.0.7",
+    "core-js": "3.9.1",
     "css-loader": "4.x",
     "csstype": "3.0.7",
-    "es-module-lexer": "0.4.0",
-    "eslint": "7.20.0",
+    "es-module-lexer": "0.4.1",
+    "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-tsdoc": "0.2.11",
-    "husky": "5.1.1",
+    "fibers": "4.0.3",
+    "husky": "5.1.3",
     "lint-staged": "10.5.4",
     "nuxt-property-decorator": "2.9.1",
     "nuxt-svg-loader": "1.2.0",
@@ -89,10 +88,10 @@
     "ts-loader": "8.0.17",
     "typescript": "4.2.2",
     "ufo": "0.6.7",
-    "vue": "3.0.6",
+    "vue": "3.0.7",
     "vue-axe": "2.4.4",
     "watchpack": "2.1.1",
-    "webpack": "5.24.2"
+    "webpack": "5.24.3"
   },
   "browserslist": [
     "defaults",
