--- a/package.json
+++ b/package.json
@@ -22,47 +22,48 @@
     "test": "echo 'skip tests (there is no test)'"
   },
   "dependencies": {
+    "@nuxt/core": "2.15.3",
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/pwa": "3.3.5",
-    "@vue/runtime-core": "3.0.6",
-    "@vue/runtime-dom": "3.0.6",
-    "axe-core": "4.1.2",
+    "@vue/runtime-core": "3.0.7",
+    "@vue/runtime-dom": "3.0.7",
+    "axe-core": "4.1.3",
     "chart.js": "2.9.4",
     "cross-env": "7.0.3",
     "dayjs": "1.10.4",
     "netlify-lambda": "2.0.3",
-    "nuxt": "2.15.2",
-    "nuxt-i18n": "6.20.3",
+    "nuxt": "2.15.3",
+    "nuxt-i18n": "6.21.0",
     "vue-chartjs": "3.5.1",
-    "vue-router": "3.5.1",
+    "vue-router": "4.0.5",
     "vue-scrollto": "2.20.0",
-    "vue-spinner": "1.0.4"
+    "vue-spinner": "1.0.4",
+    "vuetify": "3.0.0-alpha.1"
   },
   "devDependencies": {
     "@mdi/js": "5.9.55",
-    "@nuxt/types": "2.15.2",
-    "@nuxt/typescript-build": "2.0.6",
-    "@nuxt/webpack": "2.15.2",
-    "@nuxtjs/device": "2.0.0",
-    "@nuxtjs/eslint-config": "5.0.0",
-    "@nuxtjs/eslint-config-typescript": "5.0.0",
+    "@nuxt/types": "2.15.3",
+    "@nuxt/typescript-build": "2.1.0",
+    "@nuxt/webpack": "2.15.3",
+    "@nuxtjs/device": "2.0.1",
+    "@nuxtjs/eslint-config": "6.0.0",
+    "@nuxtjs/eslint-config-typescript": "6.0.0",
     "@nuxtjs/google-analytics": "2.4.0",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "2.9.31",
-    "@vue/compiler-core": "3.0.6",
-    "@vue/compiler-dom": "3.0.6",
-    "@vue/reactivity": "3.0.6",
-    "@vue/server-renderer": "3.0.6",
-    "core-js": "3.9.0",
-    "css-loader": "4.x",
-    "eslint": "7.20.0",
+    "@vue/compiler-core": "3.0.7",
+    "@vue/compiler-dom": "3.0.7",
+    "@vue/reactivity": "3.0.7",
+    "@vue/server-renderer": "3.0.7",
+    "core-js": "3.9.1",
+    "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-tsdoc": "0.2.11",
-    "husky": "5.1.1",
+    "husky": "5.1.3",
     "lint-staged": "10.5.4",
     "nuxt-property-decorator": "2.9.1",
     "nuxt-svg-loader": "1.2.0",
@@ -70,16 +71,16 @@
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
     "sass": "1.32.8",
-    "stylelint": "13.11.0",
+    "stylelint": "13.12.0",
     "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-standard": "20.0.0",
+    "stylelint-config-standard": "21.0.0",
     "stylelint-scss": "3.19.0",
-    "ts-loader": "8.0.17",
-    "typescript": "4.2.2",
-    "ufo": "0.6.7",
-    "vue": "3.0.6",
+    "ts-loader": "8.0.18",
+    "typescript": "4.2.3",
+    "ufo": "0.6.10",
+    "vue": "2.6.12",
     "vue-axe": "2.4.4",
-    "webpack": "5.24.2"
+    "webpack": "5.25.0"
   },
   "browserslist": [
     "defaults",
@@ -99,13 +100,8 @@
     ],
     "*.{css,scss,vue}": "stylelint"
   },
-  "optionalDependencies": {
-    "vue": "2.6.12",
-    "vue-server-renderer": "2.x",
-    "vue-template-compiler": "2.x"
-  },
   "resolutions": {
-    "@vue/server-renderer/vue": "3.x",
-    "@vue/compiler-*/vue": "3.x"
+    "@vue/server-renderer": "3.x",
+    "@vue/compiler-core": "3.x"
   }
 }
