vue@3 + vuetify@3 + webpack@5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,9 +27,9 @@
     },
     "types": [
       "@nuxt/types",
-      "@nuxtjs/vuetify",
       "@types/node",
-      "nuxt-i18n"
+      "nuxt-i18n",
+      "@nuxtjs/vuetofy"
     ]
   },
   "exclude": [
