--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
   "engines": {
     "node": ">=14.16.0"
   },
+  "runtimeArgs": [
+    "--max_old_space_size=4096M",
+    "--max_executable_size=4096M",
+    "--optimize-for-size",
+    "--fail-on-page-error"
+  ],
+  "fork-ts-checker": {
+    "typescript": {
+      "memoryLimit": 4096
+    }
+  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt",
-    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt",
+    "dev": "nuxt dev",
+    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe nuxt dev",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production nuxt start",
-    "generate:deploy": "cross-env GENERATE_ENV=production NODE_OPTIONS=--max_old_space_size=2048 nuxt generate --fail-on-page-error && yarn functions:build",
-    "generate:dev": "cross-env GENERATE_ENV=development NODE_OPTIONS=--max_old_space_size=2048 nuxt generate --fail-on-page-error && yarn functions:build",
+    "generate:deploy": "cross-env GENERATE_ENV=production nuxt generate && yarn functions:build",
+    "generate:dev": "cross-env GENERATE_ENV=development nuxt generate && yarn functions:build",
     "generate": "eslint \"./**/*.{js,ts,vue}\" && nuxt generate",
     "test": "echo 'skip tests (there is no test)'",
     "lint": "eslint \"./**/*.{js,ts,vue}\"",
@@ -24,7 +35,8 @@
     "functions:dev": "netlify-lambda serve functions",
     "functions:build": "netlify-lambda build functions",
     "generate-data-converters": "ts-node --compiler-options='{\"module\":\"commonjs\"}' ./tool/generateDataConverters.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "danger:ci": "danger ci"
   },
   "lint-staged": {
     "*.{js,ts,css,vue}": [
@@ -32,61 +44,70 @@
     ],
     "*.{css,scss,vue}": "stylelint"
   },
+  "resolutions": {
+    "@nuxtjs/vuetify/**/sass": "1.32.13"
+  },
   "dependencies": {
-    "@nuxt/types": "2.15.6",
+    "@nuxt/types": "2.15.7",
     "@nuxtjs/dotenv": "1.4.1",
-    "@nuxtjs/gtm": "2.4.0",
     "@nuxtjs/pwa": "3.3.5",
-    "axe-core": "4.2.2",
-    "chart.js": "2.9.4",
+    "axe-core": "4.2.3",
+    "chart.js": "3.4.1",
     "cross-env": "7.0.3",
-    "dayjs": "1.10.5",
-    "netlify-lambda": "2.0.8",
-    "nuxt": "2.15.6",
-    "nuxt-i18n": "6.27.0",
-    "vue": "2.6.12",
-    "vue-chartjs": "3.5.1",
+    "dayjs": "1.10.6",
+    "netlify-lambda": "2.0.11",
+    "nuxt": "2.15.7",
+    "nuxt-i18n": "6.27.3",
+    "react": "17.0.2",
+    "react-chartjs-2": "3.0.3",
+    "vue": "2.6.14",
     "vue-meta": "2.4.0",
-    "vue-scrollto": "2.20.0",
-    "vue-spinner": "1.0.4"
+    "vue-spinner": "1.0.4",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "7.14.3",
-    "@babel/runtime-corejs3": "7.14.0",
+    "@babel/core": "7.14.6",
     "@mdi/js": "5.9.55",
+    "@nuxt/cli": "2.15.7",
+    "@nuxt/kit": "0.6.4",
     "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/eslint-config": "6.0.1",
     "@nuxtjs/eslint-config-typescript": "6.0.1",
-    "@nuxtjs/google-analytics": "2.4.0",
     "@nuxtjs/stylelint-module": "4.0.0",
-    "@nuxtjs/vuetify": "1.11.3",
-    "@types/chart.js": "2.9.31",
-    "@types/lodash": "4.14.170",
-    "@types/node": "14.17.2",
-    "core-js": "3.12.1",
-    "danger": "10.6.4",
-    "eslint": "7.27.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
+    "@nuxtjs/vuetify": "1.12.1",
+    "@types/core-js": "2.5.4",
+    "@types/lodash": "4.14.171",
+    "@types/node": "16.3.1",
+    "@types/regenerator-runtime": "0.13.1",
+    "core-js": "3.15.2",
+    "danger": "10.6.6",
+    "eslint": "7.30.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "eslint-plugin-tsdoc": "0.2.11",
-    "husky": "6.0.0",
+    "eslint-plugin-tsdoc": "0.2.14",
+    "husky": "7.0.1",
+    "jiti": "1.10.1",
     "lint-staged": "11.0.0",
     "lodash": "4.17.21",
     "nuxt-property-decorator": "2.9.1",
     "nuxt-purgecss": "1.0.0",
     "nuxt-svg-loader": "1.2.0",
     "nuxt-webfontloader": "1.1.0",
-    "prettier": "2.3.0",
+    "prettier": "2.3.2",
     "quicktype": "15.0.260",
+    "regenerator-runtime": "0.13.7",
     "stylelint": "13.13.1",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "22.0.0",
     "stylelint-scss": "3.19.0",
     "ts-loader": "8.3.0",
-    "ts-node": "9.1.1",
-    "typescript": "4.2.4",
+    "ts-node": "10.1.0",
+    "typescript": "4.3.5",
+    "unctx": "1.0.1",
     "vue-axe": "2.4.4",
-    "vue-template-compiler": "2.6.12"
+    "vue-scrollto": "2.20.0",
+    "vue-server-renderer": "2.6.14",
+    "vue-template-compiler": "2.6.14"
   }
 }
