--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
       "@types/node",
       "@nuxt/types",
       "nuxt-i18n"
-    ]
+    ],
+    "jsx": "preserve",
   },
   "exclude": [
     "node_modules"
